--- a/index.css
+++ b/index.css
@@ -260,7 +260,7 @@ body {
 
 .content .content_head {
     /* background-image: url("vote_bg.jpeg"); */
-    background-image: url("https://stellar-anchor-uk.github.io/images/header-image.png");
+    background-image: url("https://stellaranchoruk.github.io/images/header-image.png");
     background-size: cover;
     text-align: center;
     display: block;
