--- a/yusdc/index.css
+++ b/yusdc/index.css
@@ -184,12 +184,13 @@ body {
 }
 
 .top_navbar .item {
-    padding-right: 15px;
+    padding-right: 50px;
 }
 
 .top_navbar .item:active, .top_navbar .item:hover {
-    color: #0c7db1;
-    text-decoration: none;
+    color: #f0cb78;
+    text-decoration: underline;
+    font-weight: bold;
 }
 
 .menu .menu-ctn .menu-login-main .login_button {
@@ -243,12 +244,11 @@ body {
 
 .wrapper {
     width: 100%;
-    height: calc(100% - 150px);
+    height: calc(100% - 250px);
     display: block;
     font-size: 28px;
     position: relative;
     transition: all 0.5s ease;
-    margin-top: 150px;
     /* background-color: #0c7db1; */
 }
 
@@ -260,15 +260,24 @@ body {
 
 .content .content_head {
     /* background-image: url("vote_bg.jpeg"); */
-    background-image: url("images/header-image.png");
+    background-image: url("https://stellaranchoruk.github.io/images/header-image.png");
+    background-size: cover;
     text-align: center;
     display: block;
     height: 400px;
     width: 100%;
 }
 
+.content .content_head h1 {
+    font-size: 100px;
+    height: 200px;
+    line-height: 200px;
+    margin: 0;
+    color: #fff;
+}
+
 .content .content_head h2 {
-    font-size: 40px;
+    font-size: 30px;
     height: 200px;
     line-height: 200px;
     margin: 0;
@@ -291,7 +300,7 @@ body {
 .main .explore-left {
     height: 50px;
     width: 100%;
-    display: inline-flex;
+    display: block;
     float: left;
 }
 
