--- a/gbpc/index.css
+++ b/gbpc/index.css
@@ -268,6 +268,16 @@ body {
     width: 100%;
 }
 
+.content .gbpc_head {
+    /* background-image: url("vote_bg.jpeg"); */
+    background-image: url("https://stellaranchoruk.github.io/images/gbpc_header.png");
+    background-size: cover;
+    text-align: center;
+    display: block;
+    height: 400px;
+    width: 100%;
+}
+
 .content .content_head h1 {
     font-size: 100px;
     height: 200px;
