--- a/index.css
+++ b/index.css
@@ -244,7 +244,7 @@ body {
 
 .wrapper {
     width: 100%;
-    height: calc(100% - 250px);
+    height: 958px;
     display: block;
     font-size: 28px;
     position: relative;
