--- a/test/index.css
+++ b/test/index.css
@@ -128,7 +128,7 @@ body {
     display: inline-flex;
 }
 
-/*
+
 .menu .menu-ctn .menu-login-ctn {
     width: 200px;
     flex-direction: column;
@@ -175,7 +175,7 @@ body {
 .menu-login-arrow #login-arrow-down.active,
 .menu-login-arrow #login-arrow-up.active {
     display: inline-block;
-}*/
+}
 
 .top_navbar a {
     font-size: 15px;
@@ -193,7 +193,6 @@ body {
     font-weight: bold;
 }
 
-/*
 .menu .menu-ctn .menu-login-main .login_button {
     box-sizing: border-box;
     text-decoration:none;
@@ -241,11 +240,11 @@ body {
     display: inline-block;
     font-size: 20px;
     color: #fff;
-}*/
+}
 
 .wrapper {
     width: 100%;
-    height: calc(100% - 250px);
+    height: 958px;
     display: block;
     font-size: 28px;
     position: relative;
@@ -259,8 +258,9 @@ body {
     display: block;
 }
 
-.content .content_head {
-    background-image: url("https://stellar-anchor-uk.github.io/images/header-image.png");
+.content .gbpc_head {
+    /* background-image: url("vote_bg.jpeg"); */
+    background-image: url("https://stellaranchoruk.github.io/images/gbpc_header.png");
     background-size: cover;
     text-align: center;
     display: block;
@@ -268,16 +268,16 @@ body {
     width: 100%;
 }
 
-.content .content_head h1 {
-    font-size: 80px;
+.content .gbpc_head h1 {
+    font-size: 100px;
     height: 200px;
     line-height: 200px;
     margin: 0;
     color: #fff;
 }
 
-.content .content_head h2 {
-    font-size: 40px;
+.content .gbpc_head h2 {
+    font-size: 30px;
     height: 200px;
     line-height: 200px;
     margin: 0;
@@ -300,7 +300,7 @@ body {
 .main .explore-left {
     height: 50px;
     width: 100%;
-    display: inline-flex;
+    display: block;
     float: left;
 }
 
@@ -1277,113 +1277,4 @@ img[alt*="logo"] {
 
 .stellar_copy_link .copy_link .link-ctn-text {
     color: rgb(70,120,178);
-}
-
-.bodytweet{
-	height: 1000px;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	margin: 0;
-	padding: 0 60px;
-	position: absolute;
-	vertical-align: top;
-	left: 0;
-	top: 0;
-	transition: opacity 0.5s ease;
-	background: #fff;
-}
-
-.bodytweet .body_tweet_ctn {
-    width: 100%;
-    height: 80px;
-    line-height: 80px;
-    display: inline-flex;
-    align-items: center;
-}
-
-.body_tweet_ctn .left {
-    display: inline-flex;
-    width: 50%;
-    height: 80px;
-}
-
-.body_tweet_ctn .left .left-ctn {
-    display: inline-flex;
-    height: 100%;
-    line-height: 100%;
-    width: 450px;
-    justify-content: center;
-}
-
-.left .left-ctn .home-icon {
-    display: inline-block;
-    height: 80px;
-    line-height: 80px;
-    width: 300px;
-}
-
-.left .left-ctn .home-icon a {
-    display: flex;
-    align-items: center;
-    height: 80px;
-}
-
-.left .left-ctn .home {
-    display: inline-block;
-    height: 80px;
-    line-height: 80px;
-    width: 200px;
-    text-align: center;
-    padding-left: 10px;
-}
-
-.left-ctn .home .home-link {
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    font-size: 30px;
-}
-
-.body_tweet_ctn .right {
-    display: inline-flex;
-    width: 50%;
-    height: 80px;
-}
-
-.body_tweet_ctn .right .right-ctn {
-    display: inline-flex;
-    height: 100%;
-    line-height: 100%;
-    width: 450px;
-    justify-content: center;
-}
-
-.right .right-ctn .home-icon {
-    display: inline-block;
-    height: 80px;
-    line-height: 80px;
-    width: 300px;
-}
-
-.right .right-ctn .home-icon a {
-    display: flex;
-    align-items: center;
-    height: 80px;
-}
-
-.right .right-ctn .home {
-    display: inline-block;
-    height: 80px;
-    line-height: 80px;
-    width: 200px;
-    text-align: center;
-    padding-left: 10px;
-}
-
-.right-ctn .home .home-link {
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    font-size: 30px;
 }
