--- a/gbpc/index.css
+++ b/gbpc/index.css
@@ -288,7 +288,7 @@ body {
     font-size: 20px;
     margin: 30px 4%;
     display: block;
-    height: calc(100% - 200px);
+    height: 1000px;
 }
 
 .main .explore {
