--- a/gbpc/index.css
+++ b/gbpc/index.css
@@ -287,8 +287,8 @@ body {
 .content .main {
     font-size: 20px;
     margin: 30px 4%;
-    display: flex;
-    flex-direction: column;
+    display: block;
+    height: fit-content;
 }
 
 .main .explore {
