--- a/yusdc/index.css
+++ b/yusdc/index.css
@@ -244,7 +244,7 @@ body {
 
 .wrapper {
     width: 100%;
-    height: calc(100% - 250px);
+    height: 958px;
     display: block;
     font-size: 28px;
     position: relative;
@@ -258,17 +258,17 @@ body {
     display: block;
 }
 
-.content .content_head {
+.content .gbpc_head {
     /* background-image: url("vote_bg.jpeg"); */
-    background-image: url("https://stellaranchoruk.github.io/images/header-image.png");
+    background-image: url("https://stellaranchoruk.github.io/images/gbpc_header.png");
     background-size: cover;
     text-align: center;
     display: block;
-    height: 400px;
+    height: 457px;
     width: 100%;
 }
 
-.content .content_head h1 {
+.content .gbpc_head h1 {
     font-size: 100px;
     height: 200px;
     line-height: 200px;
@@ -276,7 +276,7 @@ body {
     color: #fff;
 }
 
-.content .content_head h2 {
+.content .gbpc_head h2 {
     font-size: 30px;
     height: 200px;
     line-height: 200px;
@@ -288,7 +288,7 @@ body {
     font-size: 20px;
     margin: 30px 4%;
     display: block;
-    height: calc(100% - 200px);
+    height: fit-content;
 }
 
 .main .explore {
