--- a/yusdc/index.css
+++ b/yusdc/index.css
@@ -260,7 +260,7 @@ body {
 
 .content .gbpc_head {
     /* background-image: url("vote_bg.jpeg"); */
-    background-image: url("https://stellaranchoruk.github.io/images/gbpc_header.png");
+    background-image: url("https://stellaranchoruk.github.io/images/yUSDC_header.png");
     background-size: cover;
     text-align: center;
     display: block;
