--- a/test/index.css
+++ b/test/index.css
@@ -43,12 +43,13 @@ body {
 	align-items: center;
 	margin: 0;
 	padding: 0 60px;
-	position: absolute;
+	position: fixed;
 	vertical-align: top;
 	left: 0;
 	top: 0;
 	transition: opacity 0.5s ease;
 	background: linear-gradient(90deg, #000000, #4a4a4a);
+	z-index: 30;
 }
 
 .top_navbar .top_navbar_ctn {
