--- a/gbpc/index.css
+++ b/gbpc/index.css
@@ -262,7 +262,8 @@ body {
 .content .gbpc_head {
     /* background-image: url("vote_bg.jpeg"); */
     background-image: url("https://stellaranchoruk.github.io/images/gbpc_header.png");
-    background-size: cover;
+    background-size: 100%;
+    background-repeat: no-repeat;
     text-align: center;
     display: block;
     height: 457px;
