--- a/test/index.css
+++ b/test/index.css
@@ -52,6 +52,14 @@ body {
 	z-index: 30;
 }
 
+@media screen and (max-width: 800px)
+.top_navbar {
+    position: absolute;
+    background-color: transparent;
+    height: 5.6rem;
+    padding: 0 1.6rem;
+}
+
 .top_navbar .top_navbar_ctn {
     width: 100%;
     height: 80px;
