--- a/test/index.css
+++ b/test/index.css
@@ -52,7 +52,7 @@ body {
 	z-index: 30;
 }
 
-@media screen and (max-width: 800px)
+@media only screen and (min-width: 768px)
 .top_navbar {
     position: absolute;
     background-color: transparent;
