--- a/test/index.css
+++ b/test/index.css
@@ -55,9 +55,12 @@ body {
 @media only screen and (min-width: 768px) {
 	.top_navbar {
   	  position: absolute;
-  	  background-color: transparent;
+  	  background: transparent;
   	  height: 5.6rem;
   	  padding: 0 1.6rem;
+	}
+	.menu {
+	  display: none;
 	}
 }
 
