--- a/test2/header.scss
+++ b/test2/header.scss
@@ -9,7 +9,7 @@ header.page-header {
     padding: 0 4rem;
     left: 0;
     top: 0;
-    background-color: #ffffff;
+    background: linear-gradient(90deg, #000000, #4a4a4a);
     z-index: 30;
 
     .relative {
