--- a/styles/info.css
+++ b/styles/info.css
@@ -233,7 +233,7 @@ header.page-header {
       justify-content: center;
       width: 34px;
       height: 34px;
-      background: #FFFFFF;
+      background: #f0cb78;
       box-shadow: 0 2rem 3rem rgba(0, 6, 54, 0.06);
       border-radius: 5px;
       cursor: pointer;
