--- a/styles/info.css
+++ b/styles/info.css
@@ -823,13 +823,26 @@ section.main-block {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 34vw;
+    height: 50vw;
     background-color: #FAFAFB;
+    padding-top: 11rem;
     overflow: hidden;
     background-image: url(https://stellaranchoruk.xyz/images/header_image.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
+
+    img {
+        height: 100%;
+        margin-top: -150px;
+    }
+    img.text {
+        height: 35%;
+    }
+    img:last-child {
+        transform: scale(-1, 1)
+    }
+}
 
 @media screen and (max-width: 1000px) {
   section.main-block img {
