--- a/styles/info.css
+++ b/styles/info.css
@@ -880,6 +880,69 @@ section.main-block {
     }
 }
 
+section.main-block-gbpc {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 25vw;
+    background-color: #FAFAFB;
+    padding-top: 11rem;
+    overflow: hidden;
+    background-image: url(https://stellaranchoruk.xyz/images/gbpc_header.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-top: 80px;
+
+    img {
+        height: 100%;
+        margin-top: -150px;
+    }
+    img.text {
+        height: 35%;
+    }
+    img:last-child {
+        transform: scale(-1, 1)
+    }
+}
+
+@media screen and (max-width: 1000px){
+    section.main-block-gbpc {
+        img {
+            margin-top: -110px;
+        }
+    }
+}
+
+@media screen and (max-width: 800px){
+    section.main-block-gbpc {
+        height: 50rem;
+        justify-content: center;
+        padding-bottom: 10rem;
+        background-image: url(https://stellaranchoruk.xyz/images/header_image_mobile.png);
+        img:not(.text) {
+            height: 160%;
+            margin-top: 2rem;
+        }
+        img.text {
+            height: 27%;
+            margin-top: -31rem;
+            margin-left: -20rem;
+        }
+        img:last-child {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 470px){
+    section.main-block-gbpc {
+        justify-content: flex-start;
+        height: 35rem;
+    }
+}
+
 
 section.conditions {
   position: relative;
