--- a/styles/info.css
+++ b/styles/info.css
@@ -920,7 +920,7 @@ section.main-block-gbpc {
         height: 50rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://stellaranchoruk.xyz/images/header_image_mobile.png);
+        background-image: url(https://stellaranchoruk.xyz/images/gbpc_header_mobile.png);
         img:not(.text) {
             height: 160%;
             margin-top: 2rem;
@@ -938,6 +938,196 @@ section.main-block-gbpc {
 
 @media screen and (max-width: 470px){
     section.main-block-gbpc {
+        justify-content: flex-start;
+        height: 35rem;
+    }
+}
+
+section.main-block-yusdc {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 25vw;
+    background-color: #FAFAFB;
+    padding-top: 11rem;
+    overflow: hidden;
+    background-image: url(https://stellaranchoruk.xyz/images/yUSDC_header.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-top: 80px;
+
+    img {
+        height: 100%;
+        margin-top: -150px;
+    }
+    img.text {
+        height: 35%;
+    }
+    img:last-child {
+        transform: scale(-1, 1)
+    }
+}
+
+@media screen and (max-width: 1000px){
+    section.main-block-yusdc {
+        img {
+            margin-top: -110px;
+        }
+    }
+}
+
+@media screen and (max-width: 800px){
+    section.main-block-yusdc {
+        height: 50rem;
+        justify-content: center;
+        padding-bottom: 10rem;
+        background-image: url(https://stellaranchoruk.xyz/images/yUSDC_header_mobile.png);
+        img:not(.text) {
+            height: 160%;
+            margin-top: 2rem;
+        }
+        img.text {
+            height: 27%;
+            margin-top: -31rem;
+            margin-left: -20rem;
+        }
+        img:last-child {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 470px){
+    section.main-block-yusdc {
+        justify-content: flex-start;
+        height: 35rem;
+    }
+}
+
+section.main-block-eurc {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 25vw;
+    background-color: #FAFAFB;
+    padding-top: 11rem;
+    overflow: hidden;
+    background-image: url(https://stellaranchoruk.xyz/images/eurc_header.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-top: 80px;
+
+    img {
+        height: 100%;
+        margin-top: -150px;
+    }
+    img.text {
+        height: 35%;
+    }
+    img:last-child {
+        transform: scale(-1, 1)
+    }
+}
+
+@media screen and (max-width: 1000px){
+    section.main-block-eurc {
+        img {
+            margin-top: -110px;
+        }
+    }
+}
+
+@media screen and (max-width: 800px){
+    section.main-block-eurc {
+        height: 50rem;
+        justify-content: center;
+        padding-bottom: 10rem;
+        background-image: url(https://stellaranchoruk.xyz/images/eurc_header_mobile.png);
+        img:not(.text) {
+            height: 160%;
+            margin-top: 2rem;
+        }
+        img.text {
+            height: 27%;
+            margin-top: -31rem;
+            margin-left: -20rem;
+        }
+        img:last-child {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 470px){
+    section.main-block-eurc {
+        justify-content: flex-start;
+        height: 35rem;
+    }
+}
+
+
+section.main-block-krwc {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 25vw;
+    background-color: #FAFAFB;
+    padding-top: 11rem;
+    overflow: hidden;
+    background-image: url(https://stellaranchoruk.xyz/images/krwc_header.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-top: 80px;
+
+    img {
+        height: 100%;
+        margin-top: -150px;
+    }
+    img.text {
+        height: 35%;
+    }
+    img:last-child {
+        transform: scale(-1, 1)
+    }
+}
+
+@media screen and (max-width: 1000px){
+    section.main-block-krwc {
+        img {
+            margin-top: -110px;
+        }
+    }
+}
+
+@media screen and (max-width: 800px){
+    section.main-block-krwc {
+        height: 50rem;
+        justify-content: center;
+        padding-bottom: 10rem;
+        background-image: url(https://stellaranchoruk.xyz/images/krwc_header_mobile.png);
+        img:not(.text) {
+            height: 160%;
+            margin-top: 2rem;
+        }
+        img.text {
+            height: 27%;
+            margin-top: -31rem;
+            margin-left: -20rem;
+        }
+        img:last-child {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width: 470px){
+    section.main-block-krwc {
         justify-content: flex-start;
         height: 35rem;
     }
