--- a/test3/info.css
+++ b/test3/info.css
@@ -886,7 +886,7 @@ section.main-block-gbpc {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 25vw;
+    height: 50vw;
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
@@ -898,6 +898,12 @@ section.main-block-gbpc {
     img {
         height: 100%;
         margin-top: -150px;
+    }
+    img.text {
+        height: 35%;
+    }
+    img:last-child {
+        transform: scale(-1, 1)
     }
 }
 
@@ -914,10 +920,17 @@ section.main-block-gbpc {
         height: 50rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://stellaranchoruk.xyz/images/gbpc_header_mobile.png);
         img:not(.text) {
             height: 160%;
             margin-top: 2rem;
+        }
+        img.text {
+            height: 27%;
+            margin-top: -31rem;
+            margin-left: -20rem;
+        }
+        img:last-child {
+            display: none;
         }
     }
 }
@@ -925,9 +938,9 @@ section.main-block-gbpc {
 @media screen and (max-width: 470px){
     section.main-block-gbpc {
         justify-content: flex-start;
-        height: 35rem;
     }
 }
+
 
 section.main-block-yusdc {
     position: relative;
