--- a/test3/info.css
+++ b/test3/info.css
@@ -886,7 +886,7 @@ section.main-block-gbpc {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 50vw;
+    height: 25vw;
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
@@ -899,16 +899,29 @@ section.main-block-gbpc {
 
 @media screen and (max-width: 800px){
     section.main-block-gbpc {
-        height: 50rem;
+        height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
         background-image: url(https://stellaranchoruk.xyz/images/gbpc_header_mobile.png);
     }
 }
 
+@media screen and (max-width: 600px){
+    section.main-block-gbpc {
+        height: 35rem;
+    }
+}
+
 @media screen and (max-width: 470px){
     section.main-block-gbpc {
         justify-content: flex-start;
+        height: 27rem;
+    }
+}
+
+@media screen and (max-width: 370px){
+    section.main-block-gbpc {
+        height: 22rem;
     }
 }
 
@@ -1254,7 +1267,7 @@ section.current-stats {
   position: relative;
   display: flex;
   justify-content: center;
-  background: #000636;
+  background: #363774;
   font-family: Roboto;
   letter-spacing: 0;
   padding: 8rem 0;
