--- a/test3/info.css
+++ b/test3/info.css
@@ -2,7 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -47,7 +47,7 @@ table {
   border-spacing: 0; }
 
 html {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -703,7 +703,7 @@ section.get-token-popup .line {
 
 section.faq {
   position: relative;
-  font-family: Roboto;
+  font-family: Montserrat;
   padding-top: 5rem;
   margin: 5rem auto 0;
   display: flex; }
@@ -1129,7 +1129,7 @@ section.conditions {
   background: #FFFFFF;
   box-shadow: 0 2rem 3rem rgba(0, 6, 54, 0.06);
   border-radius: 0.5rem;
-  font-family: Roboto;
+  font-family: Montserrat;
   letter-spacing: 0; }
   section.conditions .cards {
     position: relative;
@@ -1268,7 +1268,7 @@ section.current-stats {
   display: flex;
   justify-content: center;
   background: #363774;
-  font-family: Roboto;
+  font-family: Montserrat;
   letter-spacing: 0;
   padding: 8rem 0;
   margin-top: 8rem; }
@@ -1337,7 +1337,7 @@ section.current-stats {
 
 section.account-eligibility .status.reward-status {
   display: block;
-  font-family: Roboto;
+  font-family: Montserrat;
   font-style: normal;
   letter-spacing: 0;
   margin-top: 2rem; }
@@ -1460,7 +1460,7 @@ section.account-eligibility .status.reward-status {
 
 section.account-eligibility .status.snapshot-holdings {
   display: block;
-  font-family: Roboto;
+  font-family: Montserrat;
   font-style: normal;
   letter-spacing: 0;
   margin-top: 2rem; }
@@ -1622,13 +1622,13 @@ section.account-eligibility {
       align-items: center;
       flex-direction: row; }
   section.account-eligibility .federation {
-    font-family: Roboto;
+    font-family: Montserrat;
     font-size: 1.6rem;
     line-height: 2.9rem;
     letter-spacing: 0;
     color: #000427; }
   section.account-eligibility .public-key {
-    font-family: Roboto;
+    font-family: Montserrat;
     font-size: 1.4rem;
     font-weight: 400;
     line-height: 2rem;
@@ -1732,7 +1732,7 @@ section.wallets-and-exchanges {
   position: relative;
   display: grid;
   padding: 6rem 6rem 6rem;
-  font-family: Roboto;
+  font-family: Montserrat;
   font-style: normal;
   font-weight: 400;
   letter-spacing: 0;
