--- a/test3/info.css
+++ b/test3/info.css
@@ -1756,7 +1756,7 @@ section.wallets-and-exchanges {
       font-size: 3.5rem;
       line-height: 4.1rem;
       margin-bottom: 1.7rem;
-      color: #23024D; }
+      color: #312d63; }
   section.wallets-and-exchanges .medium-link {
     display: flex;
     align-items: center;
