--- a/styles/info.css
+++ b/styles/info.css
@@ -2,7 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -47,7 +47,7 @@ table {
   border-spacing: 0; }
 
 html {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -703,7 +703,7 @@ section.get-token-popup .line {
 
 section.faq {
   position: relative;
-  font-family: Roboto;
+  font-family: Montserrat;
   padding-top: 5rem;
   margin: 5rem auto 0;
   display: flex; }
@@ -831,52 +831,34 @@ section.main-block {
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
-
-    img {
-        height: 100%;
-        margin-top: -150px;
-    }
-    img.text {
-        height: 35%;
-    }
-    img:last-child {
-        transform: scale(-1, 1)
-    }
 }
 
-@media screen and (max-width: 1000px){
-    section.main-block {
-        img {
-            margin-top: -110px;
-        }
-    }
-}
 
 @media screen and (max-width: 800px){
     section.main-block {
-        height: 50rem;
+        height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
         background-image: url(https://stellaranchoruk.xyz/images/header_image_mobile.png);
-        img:not(.text) {
-            height: 160%;
-            margin-top: 2rem;
-        }
-        img.text {
-            height: 27%;
-            margin-top: -31rem;
-            margin-left: -20rem;
-        }
-        img:last-child {
-            display: none;
-        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    section.main-block {
+        height: 35rem;
     }
 }
 
 @media screen and (max-width: 470px){
     section.main-block {
         justify-content: flex-start;
-        height: 35rem;
+        height: 27rem;
+    }
+}
+
+@media screen and (max-width: 370px){
+    section.main-block {
+        height: 22rem;
     }
 }
 
@@ -894,54 +876,37 @@ section.main-block-gbpc {
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
-
-    img {
-        height: 100%;
-        margin-top: -150px;
-    }
-    img.text {
-        height: 35%;
-    }
-    img:last-child {
-        transform: scale(-1, 1)
-    }
 }
 
-@media screen and (max-width: 1000px){
-    section.main-block-gbpc {
-        img {
-            margin-top: -110px;
-        }
-    }
-}
 
 @media screen and (max-width: 800px){
     section.main-block-gbpc {
-        height: 50rem;
+        height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
         background-image: url(https://stellaranchoruk.xyz/images/gbpc_header_mobile.png);
-        img:not(.text) {
-            height: 160%;
-            margin-top: 2rem;
-        }
-        img.text {
-            height: 27%;
-            margin-top: -31rem;
-            margin-left: -20rem;
-        }
-        img:last-child {
-            display: none;
-        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    section.main-block-gbpc {
+        height: 35rem;
     }
 }
 
 @media screen and (max-width: 470px){
     section.main-block-gbpc {
         justify-content: flex-start;
-        height: 35rem;
+        height: 27rem;
     }
 }
+
+@media screen and (max-width: 370px){
+    section.main-block-gbpc {
+        height: 22rem;
+    }
+}
+
 
 section.main-block-yusdc {
     position: relative;
@@ -957,52 +922,34 @@ section.main-block-yusdc {
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
-
-    img {
-        height: 100%;
-        margin-top: -150px;
-    }
-    img.text {
-        height: 35%;
-    }
-    img:last-child {
-        transform: scale(-1, 1)
-    }
 }
 
-@media screen and (max-width: 1000px){
-    section.main-block-yusdc {
-        img {
-            margin-top: -110px;
-        }
-    }
-}
 
 @media screen and (max-width: 800px){
     section.main-block-yusdc {
-        height: 50rem;
+        height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
         background-image: url(https://stellaranchoruk.xyz/images/yUSDC_header_mobile.png);
-        img:not(.text) {
-            height: 160%;
-            margin-top: 2rem;
-        }
-        img.text {
-            height: 27%;
-            margin-top: -31rem;
-            margin-left: -20rem;
-        }
-        img:last-child {
-            display: none;
-        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    section.main-block-yusdc {
+        height: 35rem;
     }
 }
 
 @media screen and (max-width: 470px){
     section.main-block-yusdc {
         justify-content: flex-start;
-        height: 35rem;
+        height: 27rem;
+    }
+}
+
+@media screen and (max-width: 370px){
+    section.main-block-yusdc {
+        height: 22rem;
     }
 }
 
@@ -1020,52 +967,34 @@ section.main-block-eurc {
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
-
-    img {
-        height: 100%;
-        margin-top: -150px;
-    }
-    img.text {
-        height: 35%;
-    }
-    img:last-child {
-        transform: scale(-1, 1)
-    }
 }
 
-@media screen and (max-width: 1000px){
-    section.main-block-eurc {
-        img {
-            margin-top: -110px;
-        }
-    }
-}
 
 @media screen and (max-width: 800px){
     section.main-block-eurc {
-        height: 50rem;
+        height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
         background-image: url(https://stellaranchoruk.xyz/images/eurc_header_mobile.png);
-        img:not(.text) {
-            height: 160%;
-            margin-top: 2rem;
-        }
-        img.text {
-            height: 27%;
-            margin-top: -31rem;
-            margin-left: -20rem;
-        }
-        img:last-child {
-            display: none;
-        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    section.main-block-eurc {
+        height: 35rem;
     }
 }
 
 @media screen and (max-width: 470px){
     section.main-block-eurc {
         justify-content: flex-start;
-        height: 35rem;
+        height: 27rem;
+    }
+}
+
+@media screen and (max-width: 370px){
+    section.main-block-eurc {
+        height: 22rem;
     }
 }
 
@@ -1084,52 +1013,34 @@ section.main-block-krwc {
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
-
-    img {
-        height: 100%;
-        margin-top: -150px;
-    }
-    img.text {
-        height: 35%;
-    }
-    img:last-child {
-        transform: scale(-1, 1)
-    }
 }
 
-@media screen and (max-width: 1000px){
-    section.main-block-krwc {
-        img {
-            margin-top: -110px;
-        }
-    }
-}
 
 @media screen and (max-width: 800px){
     section.main-block-krwc {
-        height: 50rem;
+        height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
         background-image: url(https://stellaranchoruk.xyz/images/krwc_header_mobile.png);
-        img:not(.text) {
-            height: 160%;
-            margin-top: 2rem;
-        }
-        img.text {
-            height: 27%;
-            margin-top: -31rem;
-            margin-left: -20rem;
-        }
-        img:last-child {
-            display: none;
-        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    section.main-block-krwc {
+        height: 35rem;
     }
 }
 
 @media screen and (max-width: 470px){
     section.main-block-krwc {
         justify-content: flex-start;
-        height: 35rem;
+        height: 27rem;
+    }
+}
+
+@media screen and (max-width: 370px){
+    section.main-block-krwc {
+        height: 22rem;
     }
 }
 
@@ -1146,7 +1057,7 @@ section.conditions {
   background: #FFFFFF;
   box-shadow: 0 2rem 3rem rgba(0, 6, 54, 0.06);
   border-radius: 0.5rem;
-  font-family: Roboto;
+  font-family: Montserrat;
   letter-spacing: 0; }
   section.conditions .cards {
     position: relative;
@@ -1284,8 +1195,8 @@ section.current-stats {
   position: relative;
   display: flex;
   justify-content: center;
-  background: #000636;
-  font-family: Roboto;
+  background: #363774;
+  font-family: Montserrat;
   letter-spacing: 0;
   padding: 8rem 0;
   margin-top: 8rem; }
@@ -1354,7 +1265,7 @@ section.current-stats {
 
 section.account-eligibility .status.reward-status {
   display: block;
-  font-family: Roboto;
+  font-family: Montserrat;
   font-style: normal;
   letter-spacing: 0;
   margin-top: 2rem; }
@@ -1477,7 +1388,7 @@ section.account-eligibility .status.reward-status {
 
 section.account-eligibility .status.snapshot-holdings {
   display: block;
-  font-family: Roboto;
+  font-family: Montserrat;
   font-style: normal;
   letter-spacing: 0;
   margin-top: 2rem; }
@@ -1639,13 +1550,13 @@ section.account-eligibility {
       align-items: center;
       flex-direction: row; }
   section.account-eligibility .federation {
-    font-family: Roboto;
+    font-family: Montserrat;
     font-size: 1.6rem;
     line-height: 2.9rem;
     letter-spacing: 0;
     color: #000427; }
   section.account-eligibility .public-key {
-    font-family: Roboto;
+    font-family: Montserrat;
     font-size: 1.4rem;
     font-weight: 400;
     line-height: 2rem;
@@ -1749,7 +1660,7 @@ section.wallets-and-exchanges {
   position: relative;
   display: grid;
   padding: 6rem 6rem 6rem;
-  font-family: Roboto;
+  font-family: Montserrat;
   font-style: normal;
   font-weight: 400;
   letter-spacing: 0;
@@ -1773,7 +1684,7 @@ section.wallets-and-exchanges {
       font-size: 3.5rem;
       line-height: 4.1rem;
       margin-bottom: 1.7rem;
-      color: #23024D; }
+      color: #312d63; }
   section.wallets-and-exchanges .medium-link {
     display: flex;
     align-items: center;
