--- a/styles/info.css
+++ b/styles/info.css
@@ -826,7 +826,7 @@ section.main-block {
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
-    background-image: url(https://stellaranchoruk.xyz/images/header_image.png);
+    background-image: url(https://mirrasets.com/images/header_image.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
@@ -838,7 +838,7 @@ section.main-block {
         height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://stellaranchoruk.xyz/images/header_image_mobile.png);
+        background-image: url(https://mirrasets.com/images/header_image_mobile.png);
     }
 }
 
@@ -871,7 +871,7 @@ section.main-block-gbpc {
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
-    background-image: url(https://stellaranchoruk.xyz/images/gbpc_header.png);
+    background-image: url(https://mirrasets.com/images/gbpc_header.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
@@ -883,7 +883,7 @@ section.main-block-gbpc {
         height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://stellaranchoruk.xyz/images/gbpc_header_mobile.png);
+        background-image: url(https://mirrasets.com/images/gbpc_header_mobile.png);
     }
 }
 
@@ -917,7 +917,7 @@ section.main-block-yusdc {
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
-    background-image: url(https://stellaranchoruk.xyz/images/yUSDC_header.png);
+    background-image: url(https://mirrasets.com/images/yUSDC_header.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
@@ -929,7 +929,7 @@ section.main-block-yusdc {
         height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://stellaranchoruk.xyz/images/yUSDC_header_mobile.png);
+        background-image: url(https://mirrasets.com/images/yUSDC_header_mobile.png);
     }
 }
 
@@ -962,7 +962,7 @@ section.main-block-eurc {
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
-    background-image: url(https://stellaranchoruk.xyz/images/eurc_header.png);
+    background-image: url(https://mirrasets.com/images/eurc_header.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
@@ -974,7 +974,7 @@ section.main-block-eurc {
         height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://stellaranchoruk.xyz/images/eurc_header_mobile.png);
+        background-image: url(https://mirrasets.com/images/eurc_header_mobile.png);
     }
 }
 
@@ -1008,7 +1008,7 @@ section.main-block-krwc {
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
-    background-image: url(https://stellaranchoruk.xyz/images/krwc_header.png);
+    background-image: url(https://mirrasets.com/images/krwc_header.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
@@ -1020,7 +1020,7 @@ section.main-block-krwc {
         height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://stellaranchoruk.xyz/images/krwc_header_mobile.png);
+        background-image: url(https://mirrasets.com/images/krwc_header_mobile.png);
     }
 }
 
