--- a/styles/info.css
+++ b/styles/info.css
@@ -108,6 +108,14 @@ div.spinner {
   100% {
     transform: rotate(360deg); } }
 
+.last-updated {
+  background-color: #f5f5f5;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 1.2em;
+  margin-bottom: 20px;
+}
+
 header.page-header {
   position: fixed;
   display: flex;
