--- a/styles/info.css
+++ b/styles/info.css
@@ -892,7 +892,7 @@ section.main-block {
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
-    background-image: url(https://mirrasets.com/images/header_image.png);
+    background-image: url(https://mirrasets.com/images/header_image1.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
@@ -904,7 +904,7 @@ section.main-block {
         height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://mirrasets.com/images/header_image_mobile.png);
+        background-image: url(https://mirrasets.com/images/header_image_mobile1.png);
     }
 }
 
@@ -937,7 +937,7 @@ section.main-block-gbpc {
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
-    background-image: url(https://mirrasets.com/images/gbpc_header.png);
+    background-image: url(https://mirrasets.com/images/gbpc_header1.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
@@ -949,7 +949,7 @@ section.main-block-gbpc {
         height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://mirrasets.com/images/gbpc_header_mobile.png);
+        background-image: url(https://mirrasets.com/images/gbpc_header_mobile1.png);
     }
 }
 
@@ -1028,7 +1028,7 @@ section.main-block-eurc {
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
-    background-image: url(https://mirrasets.com/images/eurc_header.png);
+    background-image: url(https://mirrasets.com/images/eurc_header1.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
@@ -1040,7 +1040,7 @@ section.main-block-eurc {
         height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://mirrasets.com/images/eurc_header_mobile.png);
+        background-image: url(https://mirrasets.com/images/eurc_header_mobile1.png);
     }
 }
 
@@ -1074,7 +1074,7 @@ section.main-block-krwc {
     background-color: #FAFAFB;
     padding-top: 11rem;
     overflow: hidden;
-    background-image: url(https://mirrasets.com/images/krwc_header.png);
+    background-image: url(https://mirrasets.com/images/krwc_header1.png);
     background-size: 100%;
     background-repeat: no-repeat;
     margin-top: 80px;
@@ -1086,7 +1086,7 @@ section.main-block-krwc {
         height: 46rem;
         justify-content: center;
         padding-bottom: 10rem;
-        background-image: url(https://mirrasets.com/images/krwc_header_mobile.png);
+        background-image: url(https://mirrasets.com/images/krwc_header_mobile1.png);
     }
 }
 
@@ -1105,6 +1105,51 @@ section.main-block-krwc {
 
 @media screen and (max-width: 370px){
     section.main-block-krwc {
+        height: 22rem;
+    }
+}
+
+section.main-block-reserves {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 23vw;
+    background-color: #FAFAFB;
+    padding-top: 11rem;
+    overflow: hidden;
+    background-image: url(https://mirrasets.com/images/por_header1.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin-top: 80px;
+}
+
+
+@media screen and (max-width: 800px){
+    section.main-block-reserves {
+        height: 46rem;
+        justify-content: center;
+        padding-bottom: 10rem;
+        background-image: url(https://mirrasets.com/images/por_header_mobile1.png);
+    }
+}
+
+@media screen and (max-width: 600px){
+    section.main-block-reserves {
+        height: 35rem;
+    }
+}
+
+@media screen and (max-width: 470px){
+    section.main-block-reserves {
+        justify-content: flex-start;
+        height: 27rem;
+    }
+}
+
+@media screen and (max-width: 370px){
+    section.main-block-reserves {
         height: 22rem;
     }
 }
